RESOLVED FIXED306864
[GTK][WPE] MemoryMappedGPUBuffer backed BitmapTexture occasionally hangs v3d GPU driver
https://bugs.webkit.org/show_bug.cgi?id=306864
Summary [GTK][WPE] MemoryMappedGPUBuffer backed BitmapTexture occasionally hangs v3d ...
Nikolas Zimmermann
Reported 2026-02-03 06:18:43 PST
When backed by dma-buf, Mesa and GBM share the same DRM fd and thus the same GEM handle. glDeleteTextures will cause Mesa to close the GEM handle via DRM_IOCTL_GEM_CLOSE. If gbm_bo_destroy also tries to close the same handle, the double-close corrupts V3D driver state... Detach the gbm_bo so ~MemoryMappedGPUBuffer skips gbm_bo_destroy.
Attachments
Nikolas Zimmermann
Comment 1 2026-02-03 06:21:42 PST
Nikolas Zimmermann
Comment 2 2026-03-03 06:56:12 PST
EWS
Comment 3 2026-03-03 08:06:07 PST
Committed 308550@main (9264d2efac56): <https://commits.webkit.org/308550@main> Reviewed commits have been landed. Closing PR #59800 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.