[GTK][WPE] MemoryMappedGPUBuffer backed BitmapTexture occasionally hangs v3d GPU driver https://bugs.webkit.org/show_bug.cgi?id=306864

Reviewed by NOBODY (OOPS!).

When backed by dma-buf, Mesa and GBM share the same DRM fd and thus the same
GEM handle. glDeleteTextures will cause Mesa to close the GEM handle via
DRM_IOCTL_GEM_CLOSE. If gbm_bo_destroy also tries to close the same handle,
the double-close corrupts V3D driver state... Detach the gbm_bo so
~MemoryMappedGPUBuffer skips gbm_bo_destroy.

Not testable by default will be needed by raster image batching
support in future.

* Source/WebCore/platform/graphics/gbm/MemoryMappedGPUBuffer.h:
(WebCore::MemoryMappedGPUBuffer::detachBufferObject):
* Source/WebCore/platform/graphics/texmap/BitmapTexture.cpp:
(WebCore::BitmapTexture::~BitmapTexture):