Source/WebCore/platform/graphics/gbm/MemoryMappedGPUBuffer.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024, 2025 Igalia S.L.
+ * Copyright (C) 2024, 2025, 2026 Igalia S.L.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -59,9 +59,6 @@ MemoryMappedGPUBuffer::MemoryMappedGPUBuffer(const IntSize& size, OptionSet<Buff
 MemoryMappedGPUBuffer::~MemoryMappedGPUBuffer()
 {
     unmapIfNeeded();
-
-    if (m_bo)
-        gbm_bo_destroy(m_bo);
 }
 
 std::unique_ptr<MemoryMappedGPUBuffer> MemoryMappedGPUBuffer::create(const IntSize& size, OptionSet<BufferFlag> flags)
@@ -123,117 +120,79 @@ std::unique_ptr<MemoryMappedGPUBuffer> MemoryMappedGPUBuffer::create(const IntSi
     }
 
     auto buffer = std::unique_ptr<MemoryMappedGPUBuffer>(new MemoryMappedGPUBuffer(size, flags));
-    if (!buffer->allocate(gbmDevice->device(), bufferFormat.value())) {
+    auto* bo = buffer->allocate(gbmDevice->device(), bufferFormat.value());
+    if (!bo) {
         LOG_ERROR("MemoryMappedGPUBuffer::create(), failed to create GBM buffer of size %dx%d: %s", size.width(), size.height(), safeStrerror(errno).data());
         return nullptr;
     }
 
-    if (!buffer->createDMABufFromGBMBufferObject()) {
+    if (!buffer->createDMABufFromGBMBufferObject(bo)) {
         LOG_ERROR("MemoryMappedGPUBuffer::create(), failed to create dma-buf from GBM buffer object");
+        gbm_bo_destroy(bo);
         return nullptr;
     }
 
+    gbm_bo_destroy(bo);
     return buffer;
 }
 
-bool MemoryMappedGPUBuffer::allocate(struct gbm_device* device, const GLDisplay::BufferFormat& bufferFormat)
+struct gbm_bo* MemoryMappedGPUBuffer::allocate(struct gbm_device* device, const GLDisplay::BufferFormat& bufferFormat)
 {
     auto allocateSize = m_size;
     if (m_flags.contains(BufferFlag::ForceVivanteSuperTiled))
         allocateSize = VivanteSuperTiledTexture::alignToSuperTileIntSize(m_size);
 
+    struct gbm_bo* bo = nullptr;
     m_modifier = DRM_FORMAT_MOD_INVALID;
     if (!bufferFormat.modifiers.isEmpty())
-        m_bo = gbm_bo_create_with_modifiers2(device, allocateSize.width(), allocateSize.height(), bufferFormat.fourcc.value, bufferFormat.modifiers.span().data(), bufferFormat.modifiers.size(), GBM_BO_USE_RENDERING);
+        bo = gbm_bo_create_with_modifiers2(device, allocateSize.width(), allocateSize.height(), bufferFormat.fourcc.value, bufferFormat.modifiers.span().data(), bufferFormat.modifiers.size(), GBM_BO_USE_RENDERING);
 
-    if (m_flags.contains(BufferFlag::ForceVivanteSuperTiled) && !m_bo) {
+    if (m_flags.contains(BufferFlag::ForceVivanteSuperTiled) && !bo) {
         WTFLogAlways("ERROR: ForceVivanteSuperTiled flag set but GBM couldn't allocate the buffer using gbm_bo_create_with_modifiers2. Aborting ..."); // NOLINT
         CRASH();
     }
 
-    if (m_bo) {
-        m_modifier = gbm_bo_get_modifier(m_bo);
-        ASSERT(allocateSize == allocatedSize());
+    if (bo) {
+        m_modifier = gbm_bo_get_modifier(bo);
     } else {
-        m_bo = gbm_bo_create(device, m_size.width(), m_size.height(), bufferFormat.fourcc.value, GBM_BO_USE_LINEAR);
+        bo = gbm_bo_create(device, m_size.width(), m_size.height(), bufferFormat.fourcc.value, GBM_BO_USE_LINEAR);
         m_modifier = DRM_FORMAT_MOD_INVALID;
     }
 
-    if (!m_bo || gbm_bo_get_plane_count(m_bo) <= 0)
-        return false;
+    if (!bo || gbm_bo_get_plane_count(bo) <= 0)
+        return nullptr;
 
-    return true;
+    m_allocatedSize = IntSize(gbm_bo_get_width(bo), gbm_bo_get_height(bo));
+    return bo;
 }
 
 bool MemoryMappedGPUBuffer::isLinear() const
 {
-    ASSERT(m_bo);
-    return gbm_bo_get_plane_count(m_bo) == 1 && (m_modifier == DRM_FORMAT_MOD_INVALID || m_modifier == DRM_FORMAT_MOD_LINEAR);
-}
-
-IntSize MemoryMappedGPUBuffer::allocatedSize() const
-{
-    ASSERT(m_bo);
-    return IntSize(gbm_bo_get_width(m_bo), gbm_bo_get_height(m_bo));
+    return m_modifier == DRM_FORMAT_MOD_INVALID || m_modifier == DRM_FORMAT_MOD_LINEAR;
 }
 
 bool MemoryMappedGPUBuffer::isVivanteSuperTiled() const
 {
-    ASSERT(m_bo);
-    return gbm_bo_get_plane_count(m_bo) == 1 && m_modifier == DRM_FORMAT_MOD_VIVANTE_SUPER_TILED;
+    return m_modifier == DRM_FORMAT_MOD_VIVANTE_SUPER_TILED;
 }
 
-bool MemoryMappedGPUBuffer::createDMABufFromGBMBufferObject()
+bool MemoryMappedGPUBuffer::createDMABufFromGBMBufferObject(struct gbm_bo* bo)
 {
-    ASSERT(m_eglAttributes.isEmpty());
-
     Vector<UnixFileDescriptor> fds;
     Vector<uint32_t> offsets;
     Vector<uint32_t> strides;
 
-    auto format = gbm_bo_get_format(m_bo);
+    auto format = gbm_bo_get_format(bo);
+    auto planeCount = gbm_bo_get_plane_count(bo);
 
-    m_eglAttributes = {
-        EGL_WIDTH, static_cast<EGLAttrib>(gbm_bo_get_width(m_bo)),
-        EGL_HEIGHT, static_cast<EGLAttrib>(gbm_bo_get_height(m_bo)),
-        EGL_LINUX_DRM_FOURCC_EXT, static_cast<EGLAttrib>(format)
-    };
-
-#define ADD_PLANE_ATTRIBUTES(planeIndex) { \
-    if (auto fd = exportGBMBufferObjectAsDMABuf(planeIndex)) \
-        fds.append(WTF::move(fd)); \
-    else \
-        return false; \
-    offsets.append(gbm_bo_get_offset(m_bo, planeIndex)); \
-    strides.append(gbm_bo_get_stride_for_plane(m_bo, planeIndex)); \
-    std::array<EGLint, 6> planeAttributes { \
-        EGL_DMA_BUF_PLANE##planeIndex##_FD_EXT, static_cast<EGLint>(fds.last().value()), \
-        EGL_DMA_BUF_PLANE##planeIndex##_OFFSET_EXT, static_cast<EGLint>(offsets.last()), \
-        EGL_DMA_BUF_PLANE##planeIndex##_PITCH_EXT, static_cast<EGLint>(strides.last()) \
-    }; \
-    m_eglAttributes.append(std::span<const EGLint> { planeAttributes }); \
-    if (m_modifier != DRM_FORMAT_MOD_INVALID) { \
-        std::array<EGLint, 4> modifierAttributes { \
-            EGL_DMA_BUF_PLANE##planeIndex##_MODIFIER_HI_EXT, static_cast<EGLint>(m_modifier >> 32), \
-            EGL_DMA_BUF_PLANE##planeIndex##_MODIFIER_LO_EXT, static_cast<EGLint>(m_modifier & 0xffffffff) \
-        }; \
-        m_eglAttributes.append(std::span<const EGLint> { modifierAttributes }); \
-    } \
+    for (int i = 0; i < planeCount; ++i) {
+        if (auto fd = exportGBMBufferObjectAsDMABuf(bo, i))
+            fds.append(WTF::move(fd));
+        else
+            return false;
+        offsets.append(gbm_bo_get_offset(bo, i));
+        strides.append(gbm_bo_get_stride_for_plane(bo, i));
     }
-
-    auto planeCount = gbm_bo_get_plane_count(m_bo);
-    if (planeCount > 0)
-        ADD_PLANE_ATTRIBUTES(0);
-    if (planeCount > 1)
-        ADD_PLANE_ATTRIBUTES(1);
-    if (planeCount > 2)
-        ADD_PLANE_ATTRIBUTES(2);
-    if (planeCount > 3)
-        ADD_PLANE_ATTRIBUTES(3);
-
-#undef ADD_PLANE_ATTRIBS
-
-    m_eglAttributes.append(EGL_NONE);
 
     ASSERT(!m_dmaBuf);
     m_dmaBuf = DMABufBuffer::create(m_size, format, WTF::move(fds), WTF::move(offsets), WTF::move(strides), m_modifier);
@@ -271,7 +230,7 @@ bool MemoryMappedGPUBuffer::mapIfNeeded()
         return true;
 
     ASSERT(isLinear() || isVivanteSuperTiled());
-    m_mappedLength = primaryPlaneDmaBufStride() * allocatedSize().height();
+    m_mappedLength = primaryPlaneDmaBufStride() * m_allocatedSize.height();
     m_mappedData = mmap(nullptr, m_mappedLength, PROT_READ | PROT_WRITE, MAP_SHARED, primaryPlaneDmaBufFD(), 0);
     if (m_mappedData == MAP_FAILED) {
         m_mappedLength = 0;
@@ -294,26 +253,62 @@ void MemoryMappedGPUBuffer::unmapIfNeeded()
 
 EGLImage MemoryMappedGPUBuffer::createEGLImageFromDMABuf()
 {
-    ASSERT(!m_eglAttributes.isEmpty());
+    ASSERT(m_dmaBuf);
+
+    const auto& attributes = m_dmaBuf->attributes();
+    auto planeCount = attributes.fds.size();
+
+    Vector<EGLAttrib> eglAttributes {
+        EGL_WIDTH, static_cast<EGLAttrib>(m_allocatedSize.width()),
+        EGL_HEIGHT, static_cast<EGLAttrib>(m_allocatedSize.height()),
+        EGL_LINUX_DRM_FOURCC_EXT, static_cast<EGLAttrib>(attributes.fourcc)
+    };
+
+    static constexpr std::array planeAttributeNames = {
+        std::array { EGL_DMA_BUF_PLANE0_FD_EXT, EGL_DMA_BUF_PLANE0_OFFSET_EXT, EGL_DMA_BUF_PLANE0_PITCH_EXT, EGL_DMA_BUF_PLANE0_MODIFIER_HI_EXT, EGL_DMA_BUF_PLANE0_MODIFIER_LO_EXT },
+        std::array { EGL_DMA_BUF_PLANE1_FD_EXT, EGL_DMA_BUF_PLANE1_OFFSET_EXT, EGL_DMA_BUF_PLANE1_PITCH_EXT, EGL_DMA_BUF_PLANE1_MODIFIER_HI_EXT, EGL_DMA_BUF_PLANE1_MODIFIER_LO_EXT },
+        std::array { EGL_DMA_BUF_PLANE2_FD_EXT, EGL_DMA_BUF_PLANE2_OFFSET_EXT, EGL_DMA_BUF_PLANE2_PITCH_EXT, EGL_DMA_BUF_PLANE2_MODIFIER_HI_EXT, EGL_DMA_BUF_PLANE2_MODIFIER_LO_EXT },
+        std::array { EGL_DMA_BUF_PLANE3_FD_EXT, EGL_DMA_BUF_PLANE3_OFFSET_EXT, EGL_DMA_BUF_PLANE3_PITCH_EXT, EGL_DMA_BUF_PLANE3_MODIFIER_HI_EXT, EGL_DMA_BUF_PLANE3_MODIFIER_LO_EXT },
+    };
+
+    for (size_t i = 0; i < planeCount; ++i) {
+        const auto& names = planeAttributeNames[i];
+        std::array<EGLAttrib, 6> planeAttrs {
+            names[0], static_cast<EGLAttrib>(attributes.fds[i].value()),
+            names[1], static_cast<EGLAttrib>(attributes.offsets[i]),
+            names[2], static_cast<EGLAttrib>(attributes.strides[i])
+        };
+        eglAttributes.append(std::span<const EGLAttrib> { planeAttrs });
+
+        if (m_modifier != DRM_FORMAT_MOD_INVALID) {
+            std::array<EGLAttrib, 4> modifierAttrs {
+                names[3], static_cast<EGLAttrib>(m_modifier >> 32),
+                names[4], static_cast<EGLAttrib>(m_modifier & 0xffffffff)
+            };
+            eglAttributes.append(std::span<const EGLAttrib> { modifierAttrs });
+        }
+    }
+
+    eglAttributes.append(EGL_NONE);
 
     auto& display = WebCore::PlatformDisplay::sharedDisplay();
-    auto eglImage = display.createEGLImage(EGL_NO_CONTEXT, EGL_LINUX_DMA_BUF_EXT, nullptr, m_eglAttributes);
+    auto eglImage = display.createEGLImage(EGL_NO_CONTEXT, EGL_LINUX_DMA_BUF_EXT, nullptr, eglAttributes);
     if (!eglImage)
         LOG_ERROR("MemoryMappedGPUBuffer::createEGLImageFromDMABuf(), failed to export GBM buffer as EGLImage");
 
     return eglImage;
 }
 
-UnixFileDescriptor MemoryMappedGPUBuffer::exportGBMBufferObjectAsDMABuf(unsigned planeIndex)
+UnixFileDescriptor MemoryMappedGPUBuffer::exportGBMBufferObjectAsDMABuf(struct gbm_bo* bo, unsigned planeIndex)
 {
-    auto handle = gbm_bo_get_handle_for_plane(m_bo, planeIndex);
+    auto handle = gbm_bo_get_handle_for_plane(bo, planeIndex);
     if (handle.s32 == -1) {
         LOG_ERROR("MemoryMappedGPUBuffer::exportGBMBufferObjectAsDMABuf(), failed to obtain gbm handle for plane %u", planeIndex);
         return { };
     }
 
     int fd = 0;
-    int ret = drmPrimeHandleToFD(gbm_device_get_fd(gbm_bo_get_device(m_bo)), handle.u32, DRM_CLOEXEC | DRM_RDWR, &fd);
+    int ret = drmPrimeHandleToFD(gbm_device_get_fd(gbm_bo_get_device(bo)), handle.u32, DRM_CLOEXEC | DRM_RDWR, &fd);
     if (ret < 0) {
         LOG_ERROR("MemoryMappedGPUBuffer::exportGBMBufferObjectAsDMABuf(), failed to export dma-buf for plane %u", planeIndex);
         return { };
